css/main.css
/* ... */
body {
    margin: 0;
    height: 100%;
    overflow: hidden;
    -ms-overflow-style: scrollbar;
}

.form-control{
    line-height: 1.5;
}

button, select {
    cursor: pointer;
}

/* fix disabled btn-success changing color when pressed */
.btn-success[disabled]:active {
    background-color: rgb(40, 167, 69);
}

#main-container{
 /*   position: relative;*/
}

#welcome, #about, #app{
    display: none;
}

/* welcome */
#welcome {
    margin-top: 10rem;
}

/* about */
#about {
    position: absolute;
    left: 0px;
    right: 0px;
    bottom: 0px;
    overflow-x: hidden;
    owerflow-y: auto;
}
#top-header{
    margin-top: 4rem;
    margin-bottom: 3rem;    
}
#about p {
    margin-bottom: 2rem;
}
span.about-block-border{
    padding: 2px 4px;
    border: 1px solid #d65d43;
}

/*google login*/
.openyolo-visible.navPopout {
    top: inherit !important;
    bottom: 30px !important;
}

/* app */
#app {
    position: absolute;
    height: 400px;
    width: 100%;
}


/*---------------------------------------------------------*/
/*-------------------------navbar--------------------------*/
/*---------------------------------------------------------*/

.navbar {
    padding-bottom: 4px;
    padding-top: 4px;
    z-index: 1001;
}

.navbar-dark .navbar-nav .navbar-text, 
.navbar-dark .navbar-nav .nav-link:focus, 
.navbar-dark .navbar-nav .nav-link:hover {
    color: #ffffff;				
}

.nav-item {
    margin: 0 0.5rem;
}

.nav-item > select.form-control {
    padding: 4px;
    margin-top: 4px;
}

.dropdown-toggle::after{
    margin-left: .5em;
    vertical-align: .2em;
}
#account-dropdown .dropdown-toggle::after{
    display: none;
}
#account-dropdown .dropdown-toggle.loaded::after{
    display: inherit;
}

a.navbar-brand img{
    height: 42px;
}

#readonly-icon{
    position: relative;
    min-width: 36px !important;
    max-width: 36px !important;
    width: 36px;
    min-height: 32px !important;
    max-height: 32px !important;
    height: 32px;
    margin-left: 20px;
}

#sizeIndicator, #update {
    position: relative;
    min-width: 32px !important;
    max-width: 32px !important;
    width: 32px;
    min-height: 32px !important;
    max-height: 32px !important;
    height: 32px;
    margin-left: 20px;
}

#update img {
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0;
    transition-duration: 1s;    
    transition-property: opacity;
}

#update.pending img#icon-pending {
    opacity: 1;
}
#update.saving img#icon-saving {
    opacity: 1;
}
  
.navbar-dark .navbar-nav .show>.nav-link{
    color: #f6ad6e;
}
.dropdown-item.active, .dropdown-item:active{
    background-color: white;
}

.hidden {
    display: none;
}

/*---------------------------------------------------------*/
/*-------------------------tree----------------------------*/
/*---------------------------------------------------------*/

#ztree {
    overflow: hidden;
    text-overflow: ellipsis;
    position: absolute;
    left: 0px;
    width: 25%;
    top: 0px;
    bottom: 0px;
    overflow-y: auto;
    padding: 30px 20px 20px 10px;
}
#ztree.ab-closed {
    padding: 0px;
}


.ztree *{
    font-size: 15px;
}
.ztree li{
    line-height:inherit;
}
.ztree li a {
    height: 32px;
    color: black !important;
    padding: 0px;
}
.ztree li a:hover {
    color: black;
}

.ztree li a.curSelectedNode {
    position: relative;
    height: 32px;
    background-color: inherit;
    font-weight: bold;
    border: none;
}
.ztree li a.curSelectedNode:before{
    content: "";
    position: absolute;
    width: 4px;
    background-color: #dd6600;
    top: 4px;
    left: -8px;
    height: 24px;
}

.ztree li a.curSelectedNode_Edit {
    height: 32px;
    background-color:inherit;
    border: none;
    color: black;
}
.ztree li a.tmpTargetNode_inner {  
    height: 32px;
    padding-right: 6px;
    background-color:#aaaaac46;
    border:none;
}


.ztree li a input.rename {
    height:26px;
    font-size: inherit;
    width:inherit;
    border:1px rgb(49, 49, 49) solid; *border:0px
}
.ztree li span {
    vertical-align: middle !important;
    line-height:32px;
}


/*tree icons*/
.ztree li span.button {
    width:20px; 
    height:20px;
    margin-left: 2px;
    background-size: contain;
    background-image: none;
    background-attachment: inherit;
}

.ztree li a.level0 span.button.ico_open, .ztree li a.level0 span.button.ico_close, .ztree li span.button.ico_open, .ztree li span.button.ico_close, .ztree li span.button.ico_docu {
    margin-right: 3px;
}

.ztree li a.level0 span.button.ico_open {
    background-position: inherit;
    background-image:url("../img/icons/home-opened.svg"); *background-image:url("../img/icons/home-opened.svg");
}
.ztree li a.level0 span.button.ico_close {
    background-position: inherit;
    background-image:url("../img/icons/home-closed.svg"); *background-image:url("../img/icons/home-closed.svg");
}
.ztree li span.button.ico_open {
    background-position: inherit;
    background-image:url("../img/icons/folder-open-colored.svg"); *background-image:url("../img/icons/folder-open-colored.svg");
}
.ztree li span.button.ico_close {
    background-position: inherit;
    background-image:url("../img/icons/folder-colored.svg"); *background-image:url("../img/icons/folder-colored.svg");
}
.ztree li span.button.ico_docu {
    background-position: inherit;
    background-image:url("../img/icons/file.svg"); *background-image:url("../img/icons/file.svg");
}

.ztree li span.button.add {
    margin-right:2px;
    margin-left: 12px;
    background-image:url("../img/icons/plus-bold.svg"); *background-image:url("../img/icons/plus-bold.svg");
}
.ztree li span.button.edit {
    background-position: inherit;
    background-image:url("../img/icons/edit.svg"); *background-image:url("../img/icons/edit.svg");
}
.ztree li span.button.remove {
    background-position: inherit;
    background-image:url("../img/icons/trash.svg"); *background-image:url("../img/icons/trash.svg");
}
/* ... */

